Fix request button spacing for some view sizes

--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -81,6 +81,7 @@ hr {
 
 .login-send-group {
   margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .no-js #no-sunetid-form {
